--- a/README
+++ b/README
@@ -1,64 +1,16 @@
-**************************************************************************
-************* PorousMultiphaseFoam (PMF) for OpenFOAM ********************
-**************************************************************************
+This project is the graduate thesis for students David Harispe and Octavio Garcia Aguirre, 
+with director Dr Pablo Kler and codirector Ing Gabriel Gerlero.
+Information systems engineering, UTN-FRSF.
 
-* General Informations
+This is a fork of PorousMultiphaseFoam with multiple modifications to simulate
+the Liesegang phenomena. Please refer to www.github.com/phorgue/porousMultiphaseFoam 
+for installation instructions and other such things.
 
-- The current branches (last version of the toolbox)
+Two example study cases are located in the tutorials folder, the first one is 1D and the other one
+is 2D. There's also an auxiliary tool to measure the width and spacing law of the
+simulated cases in the utilities folder, with installation instructions commented
+at the top of its sourcecode.
 
-  - branch "openfoam-v1812" > PMFv1906
-  - branch "openfoam-v6"    > PMFv1906
 
-- Old branches not updated
 
-   - branch "openfoam-v5"     > PMFv1809
-   - branch "foam-extend-4.0" >	PMFv1809
-   - branch "openfoam-v1806"  > PMFv1809
-   - branch "openfoam-v1712"  > PMFv1805
 
-- Older version (no branches)
-
-    - OpenFOAM 4.0	PMFv1.4.1
-    - OpenFOAM 3.0	PMFv1.2
-
-  - version no supported:
-    - OpenFOAM 2.4 and older
-    - foam-extend 3.2 and older
-    - OpenFOAM v1706 and older
-
-- This toolbox needs only a standard OpenFOAM installation (see www.openfoam.org
-  or openfoam.com)
-
-- Please cite the related paper in the "doc" folder if you are using this toolbox.
-
-- Read the COPYING_OPENFOAM file for information about OpenFOAM and this toolbox Copyrights.
-
-* Installation instructions : 
-
-- First, source the OpenFOAM configuration file, i.e. (example for ubuntu version) : 
-   source /opt/openfoamv6/etc/bashrc
-
-- then in the "porousMultiphaseFoam" directory, run :
-
-	./Allwmake
-
-  to install the package.
-
-- Dynamic libraries, "libporousBoundaryConditions.so" and "libporousModels.so"
-  are compiled in the standard OpenFOAM user directory : $FOAM_USER_LIBBIN;
-
-- The executable solver "impesFoam" is placed in the standard OpenFOAM user
-  directory $FOAM_USER_APPBIN.
-
-- Each tutorial directory contains "run" and "clean" files to test installation
-  and validate the solver.
-
-- A python script runTutorials.py can be used to test all components.
-
-- To remove compilation and temporary files, run :
-
-	./Allwclean
-
-- see the ReleaseNotes.txt file for detailed information about the toolbox.
-
-**************************************************************************
